--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -7,6 +7,6 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/BattleGround.BattleGround
-GameDefaultMap=/Game/BattleGround.BattleGround
+EditorStartupMap=/Game/_Level/BattleGround.BattleGround
+GameDefaultMap=/Game/_Level/MainMenu.MainMenu
 
