Tank class now outputs if the analog stick is moving the tank forward or backward(Next stage will move the tank)

--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -48,6 +48,7 @@ bDefaultViewportMouseLock=True
 +AxisMappings=(AxisName="RightTrackThrottle",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
 +AxisMappings=(AxisName="LeftTrackThrottle",Key=Gamepad_LeftShoulder,Scale=-0.500000)
 +AxisMappings=(AxisName="RightTrackThrottle",Key=Gamepad_RightShoulder,Scale=-0.500000)
++AxisMappings=(AxisName="Move Forward",Key=Gamepad_LeftY,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
