--- a/BattleTank/Config/DefaultGame.ini
+++ b/BattleTank/Config/DefaultGame.ini
@@ -1,2 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=F1D896974082CBF2473DB7BE9A4E080B
+CopyrightNotice=CopyRight Shaquille Etienne
+
