Checking if it works

--- a/BattleTank/Config/DefaultGame.ini
+++ b/BattleTank/Config/DefaultGame.ini
@@ -1,4 +1,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=F1D896974082CBF2473DB7BE9A4E080B
 CopyrightNotice=CopyRight Shaquille Etienne
+ProjectName=BattleTank
 
